Revised books 537, 542, and 16N0

--- a/book/16N0.html
+++ b/book/16N0.html
@@ -12,15 +12,15 @@ $title = '偷書賊';
 $book = 'H16N0';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/11/4 (522K)');
+ShowUpdbDownload('2023/3/14 (522K) 2016/11/4');
 ShowPrcDownload('2016/11/4 (519K)');
 ShowMobiDownload('2016/11/4 (1413K)');
-ShowEpubDownload('2016/11/4 (325K)');
-ShowVEpubDownload('2016/11/4 (325K)');
+ShowEpubDownload('2023/3/14 (325K) 2016/11/4');
+ShowVEpubDownload('2023/3/14 (325K) 2016/11/4');
 BookSectionEnd();
 ?>
 <img src="covers/16N0.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝sue1289按掃描檔整理製作。譯者呂玉嬋。
+好讀書櫃【典藏版】，感謝chin223提供掃描檔。感謝sue1289按掃描檔整理製作。譯者呂玉嬋。感謝Wanyu/IT勘誤。
 <br>
 <br>
 這是一個關於文字如何餵養人類靈魂的獨特故事－－一個撼動死神的故事；也是一部反戰小說。故事以死神為第一人稱敘述；故事發生在二次大戰期間；由莉賽爾弟弟的死亡展開……偷書的經過……養父母及男朋友的死亡……以莉賽爾的逝世結束。本書榮獲多項獎項，內容精采。<br>
@@ -29,7 +29,12 @@ BookSectionEnd();
 馬克斯．朱薩克（Markus Zusak），1975年6月23日出生於雪梨，父母分別為奧地利及德國後裔。他是當代澳大利亞小說界獲獎最多、著作最豐、讀者群最廣的作家。除了《偷書賊》外，還出版《輸家》（The Underdog）、《與魯本·烏爾夫戰斗》（Fighting Ruben Wolfe）、《得到那女孩》（Getting the Girl）、《傳信人》（I Am the Messenger）等書。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Wanyu/IT 2023/03/14)<br>
+納納黨/納粹黨<br>
+大陽/太陽<br>
+她轉身對5⋯隊員們說話/她轉身對LSC隊員們說話<br>
+<br>
 (mPDB 2016/11/4)<br>
 張布榖鳥的/張布穀鳥的<br>
 當他懊侮之時/當他懊悔之時<br>
