--- a/book/537.html
+++ b/book/537.html
@@ -12,14 +12,14 @@ $title = '黃禍';
 $book = 'A537';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2010/7/14 (954K) 2014/10/3');
-ShowPdbDownload('2007/7/6 (1067K) 2014/10/3');
-ShowPrcDownload('2010/12/22 (1105K) 2014/10/3');
-ShowEpubDownload('2010/12/22 (763K) 2014/10/3');
-ShowVEpubDownload('2014/10/3 (763K)');
+ShowUpdbDownload('2023/3/14 (954K) 2014/10/3 2010/7/14');
+ShowPdbDownload('2014/10/3 (1067K) 2007/7/6');
+ShowPrcDownload('2014/10/3 (1105K) 2010/12/22');
+ShowEpubDownload('2023/3/14 (763K) 2014/10/3 2010/12/22');
+ShowVEpubDownload('2023/3/14 (763K) 2014/10/3');
 BookSectionEnd();
 ?>
-好讀書櫃《典藏版》，感謝子軒參照原書再整理校正過：「絕版書，將原本站上的版本依1994年明鏡修訂版整理，加上蘇曉康先生的推薦序及作者的評論《十年過後談黃禍》，並將全書段落依1991年風雲版整理，更好讀了。」感謝Sai Lee提供風雲版掃描檔。感謝Fong勘誤。<br>
+好讀書櫃【典藏版】，感謝子軒參照原書再整理校正過：「絕版書，將原本站上的版本依1994年明鏡修訂版整理，加上蘇曉康先生的推薦序及作者的評論《十年過後談黃禍》，並將全書段落依1991年風雲版整理，更好讀了。」感謝Sai Lee提供風雲版掃描檔。感謝Fong勘誤。感謝兔兔/IT勘誤。<br>
 <br>
 台灣去年由大塊文化推出了「<a href="http://www.books.com.tw/exep/prod/booksfile.php?item=0010421062" target=_blank>黃禍【新世紀版】</a>」，是刪改後的版本，評價似乎不佳。<br>
 <br>
@@ -32,7 +32,16 @@ BookSectionEnd();
 等。他的政治預言小說《黃禍》，描繪中國陷於政治、經濟、人口危機，終於導致整個民族崩潰的總暴發，並危及世界和人類的存在，是在「六四」後不久，以假名「保密」發表的，引起中國及國際社會高度關注、興趣和討論。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(兔兔/IT 2023/03/14)<br>
+邁過邁過/邁過<br>
+揚穀子的話/揚穀子的活<br>
+見面氣氛的/見面的氣氛<br>
+非比即彼/非此即彼<br>
+使人相北京/使人相信北京<br>
+因比對他/因此對他<br>
+她只見過她一次/她只見過他一次<br>
+<br>
 (mPDB 2014/10/3)<br>
 嘰裡呱啦/嘰哩呱啦<br>
 籐蔓/藤蔓<br>
