--- a/book/542.html
+++ b/book/542.html
@@ -12,19 +12,30 @@ $title = '挪威的森林';
 $book = 'F542';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2011/6/24 (414K) 2015/12/4');
-ShowPrcDownload('2011/6/24 (438K) 2015/12/4');
+ShowUpdbDownload('2023/3/14 (414K) 2015/12/4 2011/6/24');
+ShowPrcDownload('2015/12/4 (438K) 2011/6/24');
 ShowMobiDownload('2015/12/4 (1204K)');
-ShowEpubDownload('2011/6/24 (285K) 2015/12/4');
-ShowVEpubDownload('2013/5/31 (286K) 2015/12/4');
+ShowEpubDownload('2023/3/14 (285K) 2015/12/4 2011/6/24');
+ShowVEpubDownload('2023/3/14 (286K) 2015/12/4 2013/5/31');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》。感謝卡思嘉提供電子檔。美格騰整理了一半，發現殘缺不全，無法卒讀，另找了一個譯本重新整理，並參照前譯本修改了一些文字不通順之處。感謝muneki勘誤13處、CE勘誤9處、Lins勘誤3處、ED2015勘誤2處。<br>
+好讀書櫃《經典版》。感謝卡思嘉提供電子檔。美格騰整理了一半，發現殘缺不全，無法卒讀，另找了一個譯本重新整理，並參照前譯本修改了一些文字不通順之處。感謝muneki勘誤13處、CE勘誤9處、Lins勘誤3處、ED2015勘誤2處。感謝regina/IT勘誤。<br>
 <br>
 《挪威的森林》是日本作家村上春樹於1987年所著的一部長篇小說。在日本廣受年青人的歡迎，是日本最暢銷的小說之一，村上春樹因此而更為人知悉。該書封面由村上春樹親手設計，以紅綠色為上下冊封面主體並加註：「百分之百的愛情小說」。該作品於1988年發行的單行本銷量449萬，納入1991年/2004年發行之文庫本總銷量達786萬，為日本近代小說銷量排行首位。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(regina/IT 2023/03/14)<br>
+校園九月分/校園九月份<br>
+想試試自己的自己的能力/想試試自己的能力<br>
+六月分戒了/六月份戒了<br>
+仆打地面的積水/撲打地面的積水<br>
+有的吸與奮劑/有的吸興奮劑<br>
+嚼意式比薩餅/嚼義式比薩餅<br>
+一九七o年/一九七〇年　（共三處）<br>
+我去吉樣四街裡/我去吉祥寺街裡<br>
+從吉樣寺下了電車/從吉祥寺下了電車<br>
+<br>
 (mPDB 2015/12/4)<br>
 形影相吊/形影相弔<br>
 華爾茲/華爾滋<br>
