Added cover clipart to book 1715

--- a/book/1715.html
+++ b/book/1715.html
@@ -82,6 +82,7 @@ ShowEpubDownload('2017/1/6 (253K) 2017/6/2');
 ShowVEpubDownload('2017/1/6 (254K) 2017/6/2');
 BookSectionEnd();
 ?>
+<img src="covers/1715.jpg" hspace=8 align=right>
 好讀書櫃《經典版》，感謝嘉明整理製作：「本書初名《大明龍騰》。網上通行本舛誤頗多，今據以校正。唯未能覺察之處想亦不少，讀友請予補正。」感謝JC勘誤一21處二11處三47處四36處五32處六35處七30處八37處。<br>
 <br>
 <b>作者簡介</b>（節錄自<a href="http://www.books.com.tw/products/0010632826" target=_blank>博客來</a>）<br>
