Revised books 1715a and 17S6

--- a/book/1715.html
+++ b/book/1715.html
@@ -12,11 +12,11 @@ $title = '新大明王朝一：回到未來';
 $book = 'H1715a';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/1/6 (313K) 2017/6/2');
+ShowUpdbDownload('2023/3/16 (313K) 2017/6/2 2017/1/6');
 ShowPrcDownload('2017/1/6 (330K) 2017/6/2');
 ShowMobiDownload('2017/1/6 (924K) 2017/6/2');
-ShowEpubDownload('2017/1/6 (226K) 2017/6/2');
-ShowVEpubDownload('2017/1/6 (226K) 2017/6/2');
+ShowEpubDownload('2023/3/16 (226K) 2017/6/2 2017/1/6');
+ShowVEpubDownload('2023/3/16 (226K) 2017/6/2 2017/1/6');
 Space();
 $title = '新大明王朝二：雙雄再會';
 $book = 'H1715b';
@@ -83,7 +83,7 @@ ShowVEpubDownload('2017/1/6 (254K) 2017/6/2');
 BookSectionEnd();
 ?>
 <img src="covers/1715.jpg" hspace=8 align=right>
-好讀書櫃《經典版》，感謝嘉明整理製作：「本書初名《大明龍騰》。網上通行本舛誤頗多，今據以校正。唯未能覺察之處想亦不少，讀友請予補正。」感謝JC勘誤一21處二11處三47處四36處五32處六35處七30處八37處。<br>
+好讀書櫃《經典版》，感謝嘉明整理製作：「本書初名《大明龍騰》。網上通行本舛誤頗多，今據以校正。唯未能覺察之處想亦不少，讀友請予補正。」感謝JC勘誤一21處二11處三47處四36處五32處六35處七30處八37處。感謝Gilbert勘誤。<br>
 <br>
 <b>作者簡介</b>（節錄自<a href="http://www.books.com.tw/products/0010632826" target=_blank>博客來</a>）<br>
 <br>
@@ -100,7 +100,64 @@ BookSectionEnd();
 大明末年，天下大亂，農民起義軍在李自成的率領下攻城掠地，所向披靡。與此同時，關外一代人傑皇太極親率十萬精銳八旗騎兵，隨時準備入關，奪取大明天下。一個現代宅男——張偉，因一次穿越時空的機會，意外回到十七世紀中國的大明末年……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(一 Gilbert 2023/03/16)<br>
+到似北方/倒似北方<br>
+模樣到似要哭出來/模樣似要哭出來<br>
+於張偉結拜/與張偉結拜<br>
+到覺得身體慢慢恢復/覺得身體慢慢恢復<br>
+來李魁奇/滅李魁奇<br>
+長琦/長崎<br>
+稱帝隆武后/稱帝隆武後<br>
+已身並無/己身並無<br>
+與這船主鄭大哥卻有些瓜葛/與這船主卻有些瓜葛<br>
+姿式/姿勢<br>
+刀頭鮮備/刀頭鮮血<br>
+赤嵌/赤崁<br>
+臉上到露出一絲笑容/臉上露出一絲笑容<br>
+漂迫海上/漂泊海上<br>
+到可容得數百/便可容得數百<br>
+么三喝四/吆三喝四<br>
+海闊憑漁躍/海闊憑魚躍<br>
+殺豬也以大叫/殺豬也似大叫<br>
+現在與鄭芝龍翻臉，那是無論如何也可行的/現在與鄭芝龍翻臉，那是無論如何也不可行的<br>
+一時意然/一時竟然<br>
+他到勤快/他倒勤快<br>
+你到調笑起我來/你倒調笑起我來<br>
+還以為自己為日漸成熟/還以為自己日漸成熟<br>
+到像是/倒像是（共二處）<br>
+擅樾祠/檀樾祠<br>
+還要要請教/還要請教<br>
+些須風暴/些許風暴<br>
+到都算的上/倒都算的上<br>
+不要殺那個人領頭的鄭氏家人/不要殺那個領頭的鄭氏家人<br>
+原本就心慌意亂的眾人氣勢衰減的眾人更覺得手腳發軟/原本就心慌意亂的眾人氣勢衰減，更覺得手腳發軟<br>
+鳥統/鳥銃（共八處）<br>
+自從庫從撥付了銀兩/自從庫中撥付了銀兩<br>
+於英國人合作/與英國人合作<br>
+英國鬼子以一身的汗臭味道/英國鬼子一身的汗臭味道<br>
+恰談/洽談<br>
+頭到有些暈/頭倒有些暈<br>
+一隻踏進大門/一隻腳踏進大門<br>
+隨著那群英國人卻購買他們的戰艦/隨著那群英國人去購買他們的戰艦<br>
+連身材高大/身材高大<br>
+我到記得/我記得<br>
+你們到會說話/你們倒會說話<br>
+張偉沉默不瓖/張偉沉默片刻<br>
+種甘製糖/種甘蔗製糖<br>
+不在和勞倫斯說話/不再和勞倫斯說話<br>
+光茫/光芒<br>
+短斯/短期<br>
+琉璜/硫磺（共二處）<br>
+必務忍耐/務必忍耐<br>
+潔靜如初/潔淨如初<br>
+不再報怨/不再抱怨<br>
+在家裏開火/在家裏開伙<br>
+聰明才志之士/聰明才智之士<br>
+煙脂水粉/胭脂水粉<br>
+在些休息等候/在此休息等候<br>
+這一年多來他曾離我們這麼遠/這一年多來他何曾離我們這麼遠<br>
+<br>
 (一 JC 2017/6/2)<br>
 兩行邊行/兩人邊行<br>
 放眼看看去/放眼看去<br>
