--- a/book/17S6.html
+++ b/book/17S6.html
@@ -12,16 +12,16 @@ $title = '模擬刺客';
 $book = 'E17S6';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (556K)');
+ShowUpdbDownload('2023/3/16 (556K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (552K)');
 ShowMobiDownload('2017/11/3 (1506K)');
-ShowEpubDownload('2017/11/3 (351K)');
-ShowVEpubDownload('2017/11/3 (351K)');
+ShowEpubDownload('2023/3/16 (351K) 2017/11/3');
+ShowVEpubDownload('2023/3/16 (351K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17S6.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17S6a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者陳榮彬。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之六</b><br>
 <br>
@@ -34,7 +34,50 @@ BookSectionEnd();
 身手過人的李奇果然「使命必達」，在短短一百二十小時內，就讓副總統在他手中「死」了三次半！但這個看似單純的模擬「遊戲」背後，卻隱藏著真正的刺殺威脅！當芙蘿莉絲在恐怖份子的攻擊行動中喪生，李奇知道他已沒有退路，他必須在最短的時間內找出幕後主使者，即使他自己也已暴露在暗殺者無情的瞄準器之下……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/16)<br>
+平整地親桌子角落/平整地放在桌子角落<br>
+﹁摔跤手﹂/﹁摔跤手﹂。<br>
+他真的有_/他真的有<br>
+總共有，百個參議員/總共有一百個參議員<br>
+點頭示意。︙︙/點頭示意。<br>
+經過︱道拱門/經過一道拱門<br>
+強焊/強悍<br>
+潘放/播放<br>
+钽成一道人牆/組成一道人牆<br>
+逼他坐我的車°/逼他坐我的車。<br>
+因為這樣一來她就得開車她把他們唯一的車開走/因為這樣一來她就得開車，她把他們唯一的車開走<br>
+每週二、四他得帶不一樣的公事包因為他不得不把公事包擺在車廂地板。/每週二、四他得帶不一樣的公事包，因為他不得不把公事包擺在車廂地板上。<br>
+他也說主來/他也說不上來<br>
+凝親著/凝視著<br>
+一道灰色裊光從窗戶斜射進來，打在牆上的灰泥剝量/一道灰色晨光從窗戶斜射進來，打在牆上的灰泥剝落處<br>
+拜托/拜託<br>
+雖然；一身黑色套裝/雖然一身黑色套裝<br>
+他們可是美國秘勤局的員工跟這棟大樓的任何人一樣背景調查會翻出他們祖宗十八代的事/他們可是美國秘勤局的員工，跟這棟大樓的任何人一樣，背景調查會翻出他們祖宗十八代的事<br>
+接下來能做的只剩下暗殺﹂/接下來能做的只剩下暗殺本人。﹂<br>
+他一進來就很受歡迎一，區區二十塊錢的食物跟飲料就可以化解不同單位間的疏離感/他一進來就很受歡迎—區區二十塊錢的食物跟飲料就可以化解不同單位間的疏離感。<br>
+按紐/按鈕<br>
+活動中心入口，百碼處/活動中心入口一百碼處<br>
+芙蘿莉絲銳/芙蘿莉絲說<br>
+到空地土等我/到空地上等我<br>
+那是當地的地標我們不能碰它/那是當地的地標，我們不能碰它<br>
+他搖頭說﹁/他搖頭說：﹁<br>
+逢容面具/遺容面具<br>
+斯里蓋洛夫/斯維德里蓋洛夫<br>
+透過合法途得/透過合法途徑購得<br>
+我做得很好嗎2﹂/認為我做得很好嗎？﹂<br>
+喬伊的老又/喬伊的老友<br>
+反而會想不出來﹂/反而會想不出來。﹂<br>
+值班餐官/值班警官<br>
+現正該說/現在該說<br>
+芙蘿認說/芙蘿莉絲說<br>
+第一個是十八天前寄來的威脅信後來又出現兩封還有三張直接送到局裡的信紙/第一個是十八天前寄來的威脅信，後來又出現兩封，還有三張直接送到局裡的信紙<br>
+環顧著這陽光照不到的房間然i目光停在女兒十八歲時的那張臉上/環顧著這陽光照不到的房間，然後目光停在女兒十八歲時的那張臉上<br>
+放瞻/放膽<br>
+去雜店買了六份/去雜貨店買了六份<br>
+五枚紙紋/五枚指紋<br>
+正準備投出指關節/正準備投出指關節球<br>
+<br>
 (mPDB 2017/11/3)<br>
 修改標點 (幾處)<br>
 橄攬色/橄欖色<br>
