Revised books 17V6 and 0941

--- a/Share/0941.html
+++ b/Share/0941.html
@@ -12,17 +12,15 @@ $title = '天使的傷痕';
 $book = 'I0941';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2010/9/30 (221K) 2016/12/2');
+ShowUpdbDownload('2023/3/16 (221K) 2016/12/2 2010/9/30');
 ShowPrcDownload('2010/9/30 (214K) 2016/12/2');
 ShowMobiDownload('2016/12/2 (611K)');
-ShowEpubDownload('2010/9/30 (145K) 2016/12/2');
-ShowVEpubDownload('2013/5/3 (145K) 2016/12/2');
+ShowEpubDownload('2023/3/16 (145K) 2016/12/2 2010/9/30');
+ShowVEpubDownload('2023/3/16 (145K) 2016/12/2 2013/5/3');
 BookSectionEnd();
 ?>
 <img src="covers/0941.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書再整理校正過。感謝9527、ED2015勘誤。<br>
-<br>
-好讀書櫃《經典版》，感謝傑克好讀整理製作。感謝phil sheu、silvia、Vivian、Bee勘誤。<br>
+好讀書櫃【典藏版】，感謝傑克好讀整理製作。感謝guinness參照原書再整理校正過。感謝phil sheu、silvia、Vivian、Bee勘誤。感謝9527、ED2015勘誤。感謝sue1289/IT勘誤。<br>
 <br>
 臺灣英文雜誌社一九九七年六月版，許錫慶譯。<br>
 <br>
@@ -40,7 +38,11 @@ BookSectionEnd();
 言歸正傳，來談談《天使的傷痕》這部作品。本作品是榮獲昭和四十年（1965年）度「江戶川亂步獎」的長篇推理小說。在書中，擔任主角的年輕新聞記者與戀人相偕去健行，卻碰巧遇上殺人事件，後來根據被害人臨死前所說的一個字，抽絲剝繭地追查被害人生前所接觸過的人，最後終於查出真凶。這是本格派推理小說（注：即正統的推理小說）的形式，也就是所謂的「尋找犯人」。<br>
 <br> 
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(sue1289/IT 2023/03/16)<br>
+就會情合理了/就合情合理了<br>
+一副愛倦的模樣/一副疲倦的模樣<br>
+<br>
 (mPDB 2016/12/2)<br>
 挫刀/銼刀<br>
 面貌詳和的人/面貌祥和的人<br>
