--- a/book/17V6.html
+++ b/book/17V6.html
@@ -12,15 +12,15 @@ $title = '蒼蠅王';
 $book = 'H17V6';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (267K)');
+ShowUpdbDownload('2023/3/16 (267K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (262K)');
 ShowMobiDownload('2017/11/3 (740K)');
-ShowEpubDownload('2017/11/3 (174K)');
-ShowVEpubDownload('2017/11/3 (174K)');
+ShowEpubDownload('2023/3/16 (174K) 2017/11/3');
+ShowVEpubDownload('2023/3/16 (174K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V6.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝敬群按掃描檔整理製作：「真是一本好書。」譯者龔志成。<br>
+好讀書櫃【典藏版】，感謝邱五提供掃描檔。感謝敬群按掃描檔整理製作：「真是一本好書。」譯者龔志成。感謝Wanyu勘誤。<br>
 <br>
 <b>內容簡介</b>（Load of the Flies）<br>
 <br>
@@ -40,5 +40,13 @@ BookSectionEnd();
 <br>
 高汀著作的小說作品有：《繼承人》（1955）、《品契．馬丁》（1956）、《自由的墜落》（1960）、《塔尖》（1964）、《金字塔》（1967）、《蠍神》（中短篇小說集，1971）、《黑暗之眼》（1979）、《Rites of Passage》（1980）——此書獲當年英國最具聲望的布克獎（Booker McConnell Prize）。此外，他還寫過劇本和評論等。<br>
 <br>
-一九八三年，高汀被授予諾貝爾文學獎。瑞典文學院聲稱，這是「因為他的小說用明晰的寫實主義的敘述藝術和多樣、具有普世價值的神話，闡明當今世界人類的狀況」。綜觀高汀的作品，《蒼蠅王》無疑是其中最重要、也最具影響力的代表作。
+一九八三年，高汀被授予諾貝爾文學獎。瑞典文學院聲稱，這是「因為他的小說用明晰的寫實主義的敘述藝術和多樣、具有普世價值的神話，闡明當今世界人類的狀況」。綜觀高汀的作品，《蒼蠅王》無疑是其中最重要、也最具影響力的代表作。<br>
+<br>
+<font size=2>
+<strong>勘誤表：</strong><br>
+(Wanyu/IT 2023/03/16)<br>
+圚滾滾/圓滾滾<br>
+那縷堙/那縷煙<br>
+雨人/兩人<br>
+</font>
 </td></tr></table>
