Revised books 1010490023, 1010490024, and 1010490025

--- a/Share/1010490023.html
+++ b/Share/1010490023.html
@@ -78,6 +78,51 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/3/16)<br>
+量的蓄牧，他/量的畜牧，他<br>
+有的土虱和頭/有的土司和頭<br>
+他在您州時就/他在仿州時就<br>
+爺的命合：：/爺的命令：：<br>
+楊帆書了兩天功夫/楊帆花了兩天功夫<br>
+實，您州、戎/實，仿州、戎<br>
+侮州、戎/仿州、戎<br>
+號稱侮州、戎/號稱仿州、戎<br>
+一位背水姑娘/一位揹水姑娘<br>
+沒有背水的姑/沒有揹水的姑<br>
+一日背水姑娘/一日揹水姑娘<br>
+那些背水姑娘/那些揹水姑娘<br>
+那麼大削宮殿裡，/那麼大的宮殿裡，<br>
+還會升官。﹁/還會升官。﹂<br>
+緊多背些水來/緊多揹些水來<br>
+婦孺背起竹簍/婦孺揹起竹簍<br>
+解開繩子。/解開繩子。﹂<br>
+一來背水的婦/一來揹水的婦<br>
+一位背水的姑/一位揹水的姑<br>
+這樣削部落/這樣的部落<br>
+一槍棚穿，再/一槍刺穿，再<br>
+士們迎去，挑、刺/士們迎去，﹁挑、刺<br>
+退、有勝無敗！﹁/退、有勝無敗！﹂<br>
+繼續固守！/繼續固守！﹂<br>
+黃興容暴跳/黃景容暴跳<br>
+插手挑州之事/插手姚州之事<br>
+督和姚撲刺史/督和姚州刺史<br>
+聽說她姚州失守/聽說姚州失守<br>
+黃興容已經/黃景容已經<br>
+以才要拼你們怎/以才要拼，你們怎<br>
+、身背水簍的/、身揹水簍的<br>
+行，巳激怒東謝/行，已激怒東謝<br>
+打下巳江縣城/打下巴江縣城<br>
+攻打巳江縣城/攻打巴江縣城<br>
+，你沒事吧？﹁/，你沒事吧？﹂<br>
+再作詳談。﹁/再作詳談。﹂<br>
+倍的傷亡。/倍的傷亡。﹂<br>
+聲音喚鑿！﹂這位/聲音喚著：﹁這位<br>
+的，燃※燒的也/的，燃燒的也<br>
+子被劉斃業帶去/子被劉光業帶去<br>
+住了呼命/住了呼吸<br>
+心，此旬未了/心，此處未了<br>
+反抗之1心。/反抗之心。<br>
+，逡巡巡在軒/，逡巡在軒<br>
 </font>
 </td></tr></table>
