--- a/Share/1010490024.html
+++ b/Share/1010490024.html
@@ -107,6 +107,29 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/3/16)<br>
+明白髮生了什麽/明白發生了什麽<br>
+姑娘眉也眼，眼/姑娘眉也笑，眼<br>
+：﹁盧兄，我這般陣/：﹁獨孤兄，我這般陣<br>
+面的駑手將弩/面的弩手將弩<br>
+多的遊魚，自/多的游魚，自<br>
+馬瀟瀟，人/馬蕭蕭，人<br>
+仲伽琅琅起誓，臉/仲伽朗朗起誓，臉<br>
+時就韬光隱晦/時就韜光隱晦<br>
+一群遊魚翩躚/一群游魚翩躚<br>
+正是韬光隱晦/正是韜光隱晦<br>
+能不所有表示。王/能不有所表示。王<br>
+孩子還我！，、/孩子還我！﹂<br>
+好！那麼︙﹂你我/好！那麼::你我<br>
+扶著典踉蹌蹌/扶著踉踉蹌蹌<br>
+茶的井夫出了/茶的工夫出了<br>
+天阿奴二話/天愛奴二話<br>
+天受奴見狀/天愛奴見狀<br>
+呆在那裡︙，/呆在那裡::。<br>
+俗的言語！﹁/俗的言語！﹂<br>
+窮形惡相。/窮形惡相。﹂<br>
+安全無比。/安全無比。﹂<br>
+候的丫環了。﹁/候的丫環了。﹂<br>
 </font>
 </td></tr></table>
