--- a/Share/1010490025.html
+++ b/Share/1010490025.html
@@ -109,6 +109,17 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/3/16)<br>
+之間萦繞著/之間縈繞著<br>
+公主敘臥在榻/公主斜臥在榻<br>
+凜。解瑟羅等各/凜。斛瑟羅等各<br>
+態度暧昧，並/態度曖昧，並<br>
+茄子若幹。已/茄子若干。已<br>
+，用暧昧的語/，用曖昧的語<br>
+敗，薛綠的兩/敗，薛紹的兩<br>
+兩人暧昧的模/兩人曖昧的模<br>
+同在社詩，聲/同在詩社，聲<br>
+﹂和﹁明堂？﹂/﹂和﹁明堂﹂？<br>
 </font>
 </td></tr></table>
