Corrected description typos for books 17P7 and 17S6

--- a/book/17P7.html
+++ b/book/17P7.html
@@ -52,6 +52,7 @@ Stevenson﹄s/Stevenson's<br>
 點二二徑/點二二口徑<br>
 強捍/強悍（共二處）<br>
 回朔方式/回溯方式<br>
+每個都有四吋厚/每個都有四吋厚。﹁很多。﹂<br>
 <br>
 (Jyayee Yen 2017/11/3)<br>
 停在，條街外/停在一條街外<br>
