--- a/book/17S6.html
+++ b/book/17S6.html
@@ -21,7 +21,7 @@ BookSectionEnd();
 ?>
 <img src="covers/17S6.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17S6a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
+好讀書櫃【典藏版】，感謝邱五提供掃描檔。感謝Angela Huang按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之六</b><br>
 <br>
@@ -77,6 +77,7 @@ BookSectionEnd();
 去雜店買了六份/去雜貨店買了六份<br>
 五枚紙紋/五枚指紋<br>
 正準備投出指關節/正準備投出指關節球<br>
+我做得很好嗎2﹂/認為我做得很好嗎？﹂<br>
 <br>
 (mPDB 2017/11/3)<br>
 修改標點 (幾處)<br>
