Initial upload of books 17F0c and 17F0d

--- a/book/17F0.html
+++ b/book/17F0.html
@@ -26,6 +26,20 @@ ShowPrcDownload('2017/7/7 (1871K)');
 ShowMobiDownload('2017/7/7 (5128K)');
 ShowEpubDownload('2017/7/7 (1256K)');
 ShowVEpubDownload('2017/7/7 (1256K)');
+Space();
+$title = '蜀山劍俠傳三';
+$book = 'A17F0c';
+ShowBookTitle();
+ShowUpdbDownload('2023/3/17 (2893K)');
+ShowEpubDownload('2023/3/17 (2167K)');
+ShowVEpubDownload('2023/3/17 (2167K)');
+Space();
+$title = '蜀山劍俠傳四';
+$book = 'A17F0d';
+ShowBookTitle();
+ShowUpdbDownload('2023/3/17 (2640K)');
+ShowEpubDownload('2023/3/17 (1971K)');
+ShowVEpubDownload('2023/3/17 (1971K)');
 BookSectionEnd();
 ?>
 <img src="covers/17F0.jpg" HSPACE=8 align=right>
