Revised books 498, 1646, and 16H3

--- a/book/1646.html
+++ b/book/1646.html
@@ -12,20 +12,33 @@ $title = '一九八四';
 $book = 'H1646';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/3/4 (264K)');
+ShowUpdbDownload('2023/3/18 (264K) 2016/3/4');
 ShowPrcDownload('2016/3/4 (283K)');
 ShowMobiDownload('2016/3/4 (808K)');
-ShowEpubDownload('2016/3/4 (201K)');
-ShowVEpubDownload('2016/3/4 (201K)');
+ShowEpubDownload('2023/3/18 (201K) 2016/3/4');
+ShowVEpubDownload('2023/3/18 (201K) 2016/3/4');
 BookSectionEnd();
 ?>
 <img src="covers/1646.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔，感謝Charles Lee按掃描檔OCR整理製作。譯者邱素慧。<br>
+好讀書櫃《典藏版》，感謝chin223提供掃描檔，感謝Charles Lee按掃描檔OCR整理製作。譯者邱素慧。感謝逯遛邍遠/IT勘誤。<br>
 <br>
 「一九八四」是喬治．歐威爾（George Orwell， 1903 ─ 1950）的扛鼎之作。它繼承了英國文學史上史威弗特機智的象徵，狄更斯清醒的反抗，和蕭伯納犀利的嘲諷。以極具分析性與批判性的敏銳眼光，抽絲剝繭地呈顯出一個獨裁的極權體制對於人性的摧殘，與赫胥黎的「美麗新世界」，被文評家一致認為是二十世紀現代小說中大膽揭露負面烏托邦的雙璧。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(逯遛邍遠/IT 2023/03/18)<br>
+我歡喜瞧這個/我喜歡瞧這個<br>
+櫃臺/櫃檯　（第一部共兩處，好與第二部統一用字）<br>
+湯杓/湯勺<br>
+兩人只管喫著/兩人只管吃著（本書其他地方用「吃」，此處卻用「喫」，全文應統一用字）<br>
+他畢竟攢了出來/他畢竟鑽了出來<br>
+菓醬/果醬<br>
+化粧/化妝　（共三處）<br>
+舖床/鋪床<br>
+舖有白床單/鋪有白床單<br>
+牀/床　（共十五處，使全書用字統一）<br>
+熟水菓/熟水果<br>
+<br>
 (mPDB 2016/3/4)<br>
 他ㄔ亍在碎/他彳亍在碎<br>
 踏在夭鵝絨/踏在天鵝絨<br>
