--- a/book/16H3.html
+++ b/book/16H3.html
@@ -12,19 +12,24 @@ $title = '流浪地球';
 $book = 'G16H3';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/9/2 (393K 2017/1/6');
+ShowUpdbDownload('2023/3/18 (393K) 2017/1/6 2016/9/2');
 ShowPrcDownload('2016/9/2 (409K) 2017/1/6');
 ShowMobiDownload('2016/9/2 (1117K) 2017/1/6');
-ShowEpubDownload('2016/9/2 (260K) 2017/1/6');
-ShowVEpubDownload('2016/9/2 (260K) 2017/1/6');
+ShowEpubDownload('2023/3/18 (260K) 2017/1/6 2016/9/2');
+ShowVEpubDownload('2023/3/18 (260K) 2017/1/6 2016/9/2');
 BookSectionEnd();
 ?>
-好讀書櫃《典藏版》，感謝doomsday按原書（長江文藝出版社，2008年11月版）整理製作。感謝Tarron勘誤11處、Gilbert勘誤9處。<br>
+好讀書櫃【典藏版】，感謝doomsday按原書（長江文藝出版社，2008年11月版）整理製作。感謝Tarron勘誤11處、Gilbert勘誤9處。感謝逯邍遠/IT勘誤<br>
 <br>
 此書為劉慈欣獲中國科幻銀河獎的中短篇科幻小說作品集，收錄有《流浪地球》《鄉村教師》《全頻帶阻塞干擾》等獲獎佳作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(逯邍遠/IT 2023/03/18)<br>
+田垅/田壟　（共兩處）<br>
+覆帶/履帶　（共三處）<br>
+憑借豐富的工作經驗/憑藉豐富的工作經驗<br>
+<br>
 (mPDB 2017/1/6)<br>
 修改標點 (多處)<br>
 <br>
