--- a/book/498.html
+++ b/book/498.html
@@ -12,21 +12,29 @@ $title = '絕代雙驕';
 $book = 'D498';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2010/8/31 (1730K) 2015/1/2');
+ShowUpdbDownload('2023/3/18 (1730K) 2015/1/2 2010/8/31');
 ShowPdbDownload('2006/10/3 (1649K) 2015/1/2');
 ShowPrcDownload('2010/10/23 (1569K) 2015/1/2');
-ShowEpubDownload('2010/10/23 (1084K) 2015/1/2');
-ShowVEpubDownload('2013/5/3 (1084K) 2015/1/2');
+ShowEpubDownload('2023/3/18 (1084K) 2015/1/2 2010/10/23');
+ShowVEpubDownload('2023/3/18 (1084K) 2015/1/2 2013/5/3');
 BookSectionEnd();
 ?>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝賴光亮參照原書 (桂冠1986年8月25日修訂版) 再整理校正過 (2014/12/5)。感謝A Yung勘誤。<br>
+好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝賴光亮參照原書 (桂冠1986年8月25日修訂版) 再整理校正過 (2014/12/5)。感謝A Yung、中二天竺鼠/IT勘誤。<br>
 <br>
 好讀書櫃《經典版》。感謝 Mimic 再整理校正過。感謝蔡如霖、Larry、muneki、CE、Maori、敖先榮、Yukuang、James勘誤。<br>
 <br>
 Mimic 說：(古龍小說)長篇我最喜歡的是絕代雙驕，中篇是歡樂英雄，短篇則是賭局、獵鷹。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(中二天竺鼠/IT 2023/03/18)<br>
+王八旦/王八蛋　(共九處)<br>
+你家，尤其是 /尤其是  (贅字)<br>
+如此迂/如此迂腐  (少字)<br>
+（標題）　第一一九，章/第一一九章<br>
+玄武官/玄武宮<br>
+萬春流根本不理她……誰多嘴,我就要他死!　(共七段全部重複了一次，刪去重複七段)<br>
+<br>
 (A Yung 2014/12/5)<br>
 一輩予/一輩子<br>
 耶黃色/那黃色<br>
