Revised books 17S8, 17V2, and 0950

--- a/Share/0950.html
+++ b/Share/0950.html
@@ -12,15 +12,15 @@ $title = '羅傑．艾克洛命案';
 $book = 'I0950';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2011/4/1 (294K) 2017/4/7');
-ShowPrcDownload('2011/4/1 (284K) 2017/4/7');
-ShowMobiDownload('2015/6/5 (817K) 2017/4/7');
-ShowEpubDownload('2011/4/1 (202K) 2017/4/7');
-ShowVEpubDownload('2013/3/29 (202K) 2017/4/7');
+ShowUpdbDownload('2023/3/21 (294K) 2017/4/7 2011/4/1');
+ShowPrcDownload('2017/4/7 (284K) 2011/4/1');
+ShowMobiDownload('2017/4/7 (817K) 2015/6/5');
+ShowEpubDownload('2023/3/21 (202K) 2017/4/7 2011/4/1');
+ShowVEpubDownload('2023/3/21 (202K) 2017/4/7 2013/3/29');
 BookSectionEnd();
 ?>
 <img src="covers/0950.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝ansa掃描原書整理製作，並提供掃描檔。譯者張江雲。<br>
+好讀書櫃《典藏版》，感謝ansa掃描原書整理製作，並提供掃描檔。譯者張江雲。感謝giff/IT勘誤。<br>
 <br>
 《羅傑疑案》，好讀書櫃《經典版》，感謝william整理製作。感謝蔡淑婷、Nancy、Bee、金權勘誤。感謝Gilbert勘誤4處、Rovor勘誤21處、mannaJ勘誤14處。<br>
 <br>
@@ -33,7 +33,10 @@ BookSectionEnd();
 <br>
 <font size=2>
 <img src="covers/0950a.jpg" HSPACE=8 vspace=2 align=right>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(giff/IT 2023/03/21)<br>
+隱滿下去／隱瞞下去<br>
+<br>
 (mPDB 2017/4/7)<br>
 孤形小道/弧形小道<br>
 不明究裏/不明就裏<br>
