--- a/book/17S8.html
+++ b/book/17S8.html
@@ -12,15 +12,15 @@ $title = '完美嫌犯';
 $book = 'E17S8';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (488K)');
+ShowUpdbDownload('2023/3/21 (488K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (475K)');
 ShowMobiDownload('2017/11/3 (1298K)');
-ShowEpubDownload('2017/11/3 (299K)');
-ShowVEpubDownload('2017/11/3 (299K)');
+ShowEpubDownload('2023/3/21 (299K) 2017/11/3');
+ShowVEpubDownload('2023/3/21 (299K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17S8.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之九</b><br>
 <br>
@@ -31,7 +31,49 @@ BookSectionEnd();
 一個前任憲兵跟這個冷血殺人魔會有什麼關聯？沒有人在乎，而且也沒有人找得到李奇，這個瘋子死定了！　　沒想到李奇卻自動現身，當眾人都以為案情即將出現大逆轉時，李奇卻說：我是來送他上斷頭台的！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/21)<br>
+蹚這淌渾水/蹚這趟渾水（共二處）<br>
+按紐/按鈕<br>
+開了六搶/開了六槍<br>
+驗DNA 一樣/驗DNA一樣<br>
+整個人反胃至極/整個人反胃至極。<br>
+兇手、搶、犯罪/兇手、槍、犯罪<br>
+CNN 便開始/CNN便開始<br>
+A A羅汀/AA羅汀（共二處）<br>
+A A是什麼/AA是什麼<br>
+對咖啡常講究/對咖啡非常講究<br>
+約莫丙哩外/約莫兩哩外<br>
+因為他開的只四汽缸雪佛蘭/因為他開的只是輛四汽缸雪佛蘭<br>
+抬起起頭/抬起頭<br>
+點滴袋上的字。一．．/點滴袋上的字。<br>
+動物的DNA ，/動物的DNA，<br>
+櫃檯紀錚/櫃檯紀錄<br>
+都是為了取悅她．赫頓對周遭的人就是/都是為了取悅她，赫頓對周遭的人就是<br>
+確寶地/確實地<br>
+待殊原因/特殊原因<br>
+他覺能見過一次/他覺得能見過一次<br>
+毅光為止/殺光為止<br>
+在外面多拋頭露面﹂/在外面多拋頭露面。﹂<br>
+掃親第四邊/掃視第四邊<br>
+可是長我很渴/可是我很渴<br>
+華盛賴/華盛頓<br>
+焊馬/悍馬（共二處）<br>
+坂動槍機/扳動槍機<br>
+曾輕遭人/曾經遭人<br>
+這長傑柏的嗎？/這是傑柏的嗎？<br>
+彈瞠/彈膛<br>
+﹁PA ，﹂/﹁PA，﹂<br>
+Boss牌/Bose牌<br>
+正如我_所說/正如我剛剛所說<br>
+撿起搶射擊/撿起槍射擊<br>
+打給NBC ，/打給NBC，<br>
+這個男人？J﹂/這個男人？﹂<br>
+另一個世界的人/另一個世界的人。<br>
+C D音響/CD音響<br>
+以Z 字形/以Z字形<br>
+NBC?/NBC？<br>
+<br>
 (mPDB 2017/11/3)<br>
 星期曰/星期日<br>
 黑色坡璃高樓/黑色玻璃高樓<br>
