--- a/book/17V2.html
+++ b/book/17V2.html
@@ -12,15 +12,15 @@ $title = '無間任務';
 $book = 'E17V2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (525K)');
+ShowUpdbDownload('2023/3/21 (525K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (525K)');
 ShowMobiDownload('2017/11/3 (1433K)');
-ShowEpubDownload('2017/11/3 (332K)');
-ShowVEpubDownload('2017/11/3 (332K)');
+ShowEpubDownload('2023/3/21 (332K) 2017/11/3');
+ShowVEpubDownload('2023/3/21 (332K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V2.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之七</b><br>
 <br>
@@ -37,7 +37,37 @@ BookSectionEnd();
 層層障礙、戒備森嚴的海邊山莊，圈住了一個疑點重重的案件，這將是「浪人神探」傑克．李奇所面臨最複雜的難題！沒逃出這座山莊，又怎能闔上書頁？備受史蒂芬．金讚譽的英國驚悚天王李查德的無懈可擊之作，絕對讓你緊張得忘了呼吸！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/21)<br>
+陡哨/陡峭（共三處）<br>
+橋車/轎車（共三處）<br>
+輪胎 嘎嘎聲/輪胎嘎嘎聲<br>
+他年二十歲/他今年二十歲<br>
+以為他沒出我/以為他沒認出我<br>
+要找位子3三個人坐/要找位子讓三個人坐<br>
+﹁身上，穿戴著昂貴的喀什米爾大衣/﹁身上穿戴著昂貴的喀什米爾大衣<br>
+︱帶我進去後/達菲帶我進去後<br>
+可能只差1、兩磅/可能只差一、兩磅<br>
+GP S/GPS<br>
+這種東應該/這種東西應該<br>
+伊莉莎．貝克/伊莉莎白．貝克<br>
+刻出自己的名字，_﹂/刻出自己的名字，﹂<br>
+壇自/擅自<br>
+ ﹁你能在他們檢查她的鞋子前找到她嗎？﹂/﹁你能在他們檢查她的鞋子前找到她嗎？﹂（句首多一空格）<br>
+晚一 點/晚一點<br>
+SP P/SPP<br>
+﹁ 確定。﹂/﹁確定。﹂<br>
+戰鑑/戰艦<br>
+鑑砲/艦砲<br>
+他釣下顎/他的下顎<br>
+軍法官說。﹃/軍法官說。<br>
+可以解免他/可以解決他<br>
+第一 把/第一把<br>
+九一 一/九一一<br>
+在個廉價旅館的房間裡/在廉價旅館的房間裡<br>
+多明，我真的努力過了/多明妮，我真的努力過了<br>
+﹁鑰匙在這兒。﹂我說/﹁鑰匙在這兒。﹂我說。<br>
+<br>
 (mPDB 2017/11/3)<br>
 還在顏抖。/還在顫抖。<br>
 搭擋/搭檔<br>
