Revised books 17K2, 240, and 081014

--- a/Share/081014.html
+++ b/Share/081014.html
@@ -12,15 +12,15 @@ $title = '醜陋的中國人';
 $book = 'J081014';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2011/6/17 (341K) 2017/2/3');
+ShowUpdbDownload('2023/3/21 (341K) 2017/2/3 2011/6/17');
 ShowPrcDownload('2011/6/17 (385K) 2017/2/3');
 ShowMobiDownload('2017/2/3 (1068K)');
-ShowEpubDownload('2011/6/17 (279K) 2017/2/3');
-ShowVEpubDownload('2013/2/1 (279K) 2017/2/3');
+ShowEpubDownload('2023/3/21 (279K) 2017/2/3 2011/6/17');
+ShowVEpubDownload('2023/3/21 (279K) 2017/2/3 2013/2/1');
 BookSectionEnd();
 ?>
 <img src="covers/081014.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝獅子製作。感謝guinness依照遠流二○○八年紀念版再重新整理校正。感謝Sai Lee提供掃描檔。感謝陳白乾勘誤。感謝King勘誤3處。<br>
+好讀書櫃《典藏版》，感謝獅子製作。感謝guinness依照遠流二○○八年紀念版再重新整理校正。感謝Sai Lee提供掃描檔。感謝陳白乾勘誤。感謝King勘誤3處。感謝無聞/IT勘誤。<br>
 <br>
 《醜陋的中國人》是作家柏楊在各種公開場合演講的講稿集結合成的。在此作中將中國文化比擬為「醬缸」，而柏楊於海外發表的文章與演講都著重於中國人的醜陋面與劣根性。<br>
 <br>
@@ -31,7 +31,10 @@ BookSectionEnd();
 本書為集結短文及演講稿方式進行編輯出版，除柏楊本身代序外，為集結各式柏楊針對「中國醬缸文化」所發表文章所組成之書籍。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(無聞/IT 2023/03/15)<br>
+（代序）　嶽生/醫生<br>
+<br>
 (mPDB 2017/2/3)<br>
 嘟嚷/嘟囔<br>
 忍其觳悚之心/忍其觳觫之心<br>
