--- a/book/240.html
+++ b/book/240.html
@@ -15,11 +15,11 @@ $author = '二月河';
 $title = '雍正皇帝一：九王奪嫡';
 $book = 'C240a';
 ShowBookTitle();
-ShowUpdbDownload('2011/12/6 (748K) 2017/2/3');
+ShowUpdbDownload('2023/03/21 (748K) 2017/2/3 2011/12/6');
 ShowPrcDownload('2011/12/6 (831K) 2017/2/3');
 ShowMobiDownload('2017/2/3 (2332K)');
-ShowEpubDownload('2011/12/6 (592K) 2017/2/3');
-ShowVEpubDownload('2013/2/1 (593K) 2017/2/3');
+ShowEpubDownload('2023/03/21 (592K) 2017/2/3 2011/12/6');
+ShowVEpubDownload('2023/03/21 (593K) 2017/2/3 2013/2/1');
 Space();
 $title = '雍正皇帝二：雕弓天狼';
 $book = 'C240b';
@@ -43,7 +43,7 @@ BookSectionEnd();
 <img src="covers/240a.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/240b.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/240d.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝eagle.rex參照臺灣巴比倫出版社1995年正體字本再整理校正過。感謝eagle.rex、林宏彰、Vanessa Chen、Hung Chang、Jackie、Lin hung-chang、Lin Lee、鄭文錦勘誤。感謝Sai Lee提供掃描檔。感謝簡華特勘誤一34處二22處三16處。<br>
+好讀書櫃《典藏版》，感謝eagle.rex參照臺灣巴比倫出版社1995年正體字本再整理校正過。感謝eagle.rex、林宏彰、Vanessa Chen、Hung Chang、Jackie、Lin hung-chang、Lin Lee、鄭文錦勘誤。感謝Sai Lee提供掃描檔。感謝簡華特勘誤一34處二22處三16處。感謝鰨目/IT勘誤。<br>
 <br>
 (Lin Lee《雍正皇帝三》勘誤 2013/6/28) 「耗限」與「耗羨」兩詞在書中混用，因才疏學淺及查不到「耗限」之意，故未予更正。<br>
 <br>
@@ -52,7 +52,12 @@ BookSectionEnd();
 好讀書櫃《經典版》，美格騰再整理校正過。這個版本是二月河原著，王瑞文、趙維莉改編的。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(鰨目/IT 2023/03/21)<br>
+内幣/内帑 （共四處）<br>
+猞猁猴/猞猁猻 　（共兩處）<br>
+燕太了丹/燕太子丹<br>
+<br>
 (雍正皇帝一 mPDB 2017/2/3)<br>
 白︵草頭下术︶刺菜/白𦬸刺菜<br>
 舔嘴乍舌地直/舔嘴咋舌地直<br>
