--- a/book/17K2.html
+++ b/book/17K2.html
@@ -12,21 +12,24 @@ $title = '中國歷代政治得失';
 $book = 'C17K2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/9/1 (191K)');
+ShowUpdbDownload('2023/3/21 (191K) 2017/9/1');
 ShowPrcDownload('2017/9/1 (196K)');
 ShowMobiDownload('2017/9/1 (555K)');
-ShowEpubDownload('2017/9/1 (133K)');
-ShowVEpubDownload('2017/9/1 (133K)');
+ShowEpubDownload('2023/3/21 (133K) 2017/9/1');
+ShowVEpubDownload('2023/3/21 (133K) 2017/9/1');
 BookSectionEnd();
 ?>
 <img src="covers/17K2.jpg" hspace=8 align=right>
-好讀書櫃《典藏版》，感謝嘉明參照掃描檔整理校正過。感謝doomsday提供掃描檔。<br><br>
+好讀書櫃《典藏版》，感謝嘉明參照掃描檔整理校正過。感謝doomsday提供掃描檔。感謝WXH/IT勘誤。<br><br>
 <b>錢穆《中國歷代政治得失》提要</b> (錄自<a href="http://http://baike.baidu.com/item/%E4%B8%AD%E5%9B%BD%E5%8E%86%E4%BB%A3%E6%94%BF%E6%B2%BB%E5%BE%97%E5%A4%B1" target=_blank>百度百科</a>)<br>
 <br>
 本書為作者的專題演講合集，分別就中國漢、唐、宋、明、清五代的政府組織、百官職權、考試監察、財經賦稅、兵役義務等種種政治制度作了提要鉤玄的概觀與比照，敍述因革演變，指陳利害得失。既高屋建瓴地總括了中國歷史與政治的精要大義，又點明了近現代國人對傳統文化和精神的種種誤解。言簡意賅，語重心長，實不失為一部簡明的「中國政治制度史」。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(WXH/IT 2023/03/21)<br>
+政府的權，總是逐步將/政府的權，總是逐步降<br>
+<br>
 (mPDB 2017/9/1)<br>
 ｜/一 (幾處)<br>
 </font>
