--- a/book/17P7.html
+++ b/book/17P7.html
@@ -41,7 +41,7 @@ Mostro﹄s/Mostro's（共二處）<br>
 MacStiophan﹄s/MacStiophan's<br>
 Stevenson﹄s/Stevenson's<br>
 發纈/發飆<br>
-每個都有四吋厚/每個都有四吋厚。﹁很多。﹂<br>
+每個都有四吋厚/每個都有四吋厚。<br>
 加州的病理學家家也是找不到。/加州的病理學家與鑑識科學家也是什麼都找不到。<br>
 耙上人形/靶上人形<br>
 ：不過已經沒辦法再談下去了。/不過已經沒辦法再談下去了。<br>
@@ -52,7 +52,6 @@ Stevenson﹄s/Stevenson's<br>
 點二二徑/點二二口徑<br>
 強捍/強悍（共二處）<br>
 回朔方式/回溯方式<br>
-每個都有四吋厚/每個都有四吋厚。﹁很多。﹂<br>
 <br>
 (Jyayee Yen 2017/11/3)<br>
 停在，條街外/停在一條街外<br>
