Corrected typos and HTML formatting issues

--- a/Share/1010490127.html
+++ b/Share/1010490127.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("也斯【守望香港：香港—東京往復書簡】");
-SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-3">隨身智囊 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/4/7');
 BookSectionEnd();
 ?>
 <img src="covers/1010490127.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝IT整理製作，感謝chin223提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
