--- a/Share/1010490132.html
+++ b/Share/1010490132.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("司馬遼太郎【最後的將軍：德川慶喜】");
-SetLink('<a href="?M=hd&P=history-3">歷史煙雲 書目</a>');
+SetLink('<a href="?M=hd&P=history-1">歷史煙雲 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
@@ -22,11 +22,11 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-「他忍辱後退了一小步，日本向前邁進了一大步。沒有德川慶喜的自我克制，就沒有明治維新的燦爛花朵……。」<br>
+「他忍辱後退了一小步，日本向前邁進了一大步。沒有德川慶喜的自我克制，就沒有明治維新的燦爛花朵。」<br>
 <br>
-德川慶喜少年時代接受嚴格的武士教育，但隨著西方船艦的叩關，歐風自然影響了他。他接受歐洲文明，敬佩華盛頓，崇拜拿破崙；生活上他偏愛西餐，喜歡照相，性情執拗，愛好女色……。<br>
+德川慶喜少年時代接受嚴格的武士教育，但隨著西方船艦的叩關，歐風自然影響了他。他接受歐洲文明，敬佩華盛頓，崇拜拿破崙；生活上他偏愛西餐，喜歡照相，性情執拗，愛好女色。<br>
 <br>
-捲入幕末的政治漩渦之後，德川慶喜逐漸適應，以其辯才無礙的天份、縝密的思慮，在整個「倒幕勤王」的大勢中，入主德川家。雖然成為第十五代將軍的他，終究無法力挽狂瀾，振興式微的幕府，但身處歷史變局的德川慶喜，卻能在關鍵時刻選擇自我克制向後退了一小步，自此，在德川慶喜這位最後將軍的身影下，日本終於得向前邁進一大步，走向燦爛的未來……。<br>
+捲入幕末的政治漩渦之後，德川慶喜逐漸適應，以其辯才無礙的天份、縝密的思慮，在整個「倒幕勤王」的大勢中，入主德川家。雖然成為第十五代將軍的他，終究無法力挽狂瀾，振興式微的幕府，但身處歷史變局的德川慶喜，卻能在關鍵時刻選擇自我克制向後退了一小步，自此，在德川慶喜這位最後將軍的身影下，日本終於得向前邁進一大步，走向燦爛的未來。<br>
 <br>
 「明治維新」是日本邁向現代化的起點，也是英雄豪傑各領風騷、各顯本領的時期。司馬遼太郎的生花妙筆，刻劃豪傑們的心路歷程，震撼人心值得一讀。<br>
 <br>
