Corrected typos and formatting issues

--- a/Share/1010490135.html
+++ b/Share/1010490135.html
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/4/14');
 BookSectionEnd();
 ?>
 <img src="covers/1010490135.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Wanyu整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝chin223提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
