Revised books 1010490026, 1010490027, and 1010490028

--- a/Share/1010490026.html
+++ b/Share/1010490026.html
@@ -12,9 +12,9 @@ $title = '醉枕江山卷二十一：契丹之亂';
 $book = 'P1010490026';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/7');
-ShowEpubDownload('2022/12/7');
-ShowVEpubDownload('2022/12/7');
+ShowUpdbDownload('2023/3/23 2022/12/7');
+ShowEpubDownload('2023/3/23 2022/12/7');
+ShowVEpubDownload('2023/3/23 2022/12/7');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
@@ -99,6 +99,23 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/3/23)<br>
+右玉钤衛將/右玉鈐衛將<br>
+趙文翙不但/趙文翽不但<br>
+趙文翙，義/趙文翽，義<br>
+趙文翙，旋/趙文翽，旋<br>
+趙文翙是怎/趙文翽是怎<br>
+一個身健健康的老/一個身體健康的老<br>
+結果碛北突/結果磧北突<br>
+右豹韬衛將/右豹韜衛將<br>
+將領長籲短嘆一番/將領長吁短嘆一番<br>
+的是說服契丹人出兵/的是說服突厥人出兵<br>
+擄掠了番，暫/擄掠了一番，暫<br>
+出，契凡縱橫/出，契丹縱橫<br>
+急，契凡人隨/急，契丹人隨<br>
+只能穩紮穩紮，層/只能穩紮穩打，層<br>
+紛紛討好契丹，許/紛紛討好突厥，許<br>
+每一秒鍾，都/每一秒鐘，都<br>
 </font>
 </td></tr></table>
