--- a/Share/1010490027.html
+++ b/Share/1010490027.html
@@ -12,9 +12,9 @@ $title = '醉枕江山卷二十二：玲瓏局';
 $book = 'P1010490027';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/14');
-ShowEpubDownload('2022/12/14');
-ShowVEpubDownload('2022/12/14');
+ShowUpdbDownload('2023/3/23 2022/12/14');
+ShowEpubDownload('2023/3/23 2022/12/14');
+ShowVEpubDownload('2023/3/23 2022/12/14');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
@@ -102,6 +102,11 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/3/23)<br>
+有些後怕地看/有些害怕地看<br>
+對﹁繼嗣堂﹁做出/對﹁繼嗣堂﹂做出<br>
+生長髮育造成/生長發育造成<br>
+楊帆啼笑畢非，捧/楊帆啼笑皆非，捧<br>
 </font>
 </td></tr></table>
