--- a/Share/1010490028.html
+++ b/Share/1010490028.html
@@ -12,9 +12,9 @@ $title = '醉枕江山卷二十三：千騎將';
 $book = 'P1010490028';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/16');
-ShowEpubDownload('2022/12/16');
-ShowVEpubDownload('2022/12/16');
+ShowUpdbDownload('2023/3/23 2022/12/16');
+ShowEpubDownload('2023/3/23 2022/12/16');
+ShowVEpubDownload('2023/3/23 2022/12/16');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
@@ -101,6 +101,21 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/3/23)<br>
+如待七夕了吧？/如待七夕了吧？﹂<br>
+他的壯配，楊/他的壯丁，楊<br>
+一州刺使直接/一州刺史直接<br>
+人兒發梳小雙/人兒髮梳小雙<br>
+挨了若幹記拳/挨了若干記拳<br>
+頭、若幹記腳/頭、若干記腳<br>
+一個囫囵身子/一個囫圇身子<br>
+今日效遊，小/今日郊遊，小<br>
+帆的發梢，他/帆的髮梢，他<br>
+波一潋，脫/波一瀲，脫<br>
+起的阿鬥，同/起的阿斗，同<br>
+锃亮的/鋥亮的<br>
+李冥鯤鯤道：/李冥鯤道：<br>
+同﹁天柩閣﹂/同﹁天樞閣﹂<br>
 </font>
 </td></tr></table>
