--- a/Share/1010490118.html
+++ b/Share/1010490118.html
@@ -12,13 +12,13 @@ $title = '嫌疑';
 $book = 'P1010490118';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/20');
-ShowEpubDownload('2023/3/20');
-ShowVEpubDownload('2023/3/20');
+ShowUpdbDownload('2023/3/23 2023/3/20');
+ShowEpubDownload('2023/3/23 2023/3/20');
+ShowVEpubDownload('2023/3/23 2023/3/20');
 BookSectionEnd();
 ?>
 <img src="covers/1010490118.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝佳佳整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝佳佳整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -79,5 +79,44 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(Gilbert 2023/03/23)<br>
+一九六〇〇年/一九六〇年<br>
+江戶川亂步獎等多項獎項評審委現為日本推理文學大獎的評審委員/獎江戶川亂步獎等多項獎項評審委員，現為日本推理文學大獎的評審委員<br>
+體格這麼撞/體格這麼壯<br>
+有點是想請教/有點事想請教<br>
+魚是她到藥局/於是她到藥局<br>
+腳費/繳費<br>
+一直等再後方/一直等在後方<br>
+岸綠/岸緣<br>
+落在車內頂蓬上方吧。/落在車內頂蓬上方吧。﹂<br>
+萊到外頭走廊/來到外頭走廊<br>
+卻另秋谷無法釋懷/卻令秋谷無法釋懷<br>
+滞留/滯留<br>
+有關更其利益/有關變更其利益<br>
+甲級戰費/甲級戰犯<br>
+終日戰爭/中日戰爭<br>
+<br>
+Dondorf　&　Naumann/Dondorf　＆　Naumann（共二十一處，修正為全型以避免亂碼）<br>
+Dondorf & Naumann/Dondorf　＆　Naumann（僅一處，修正為全型並與其他格式統一，以避免亂碼）<br>
+<br>
+I子小姐/Ｉ子小姐（共五處，此處無錯誤，但因半型《I》與前後中文極為接近易妨礙閱讀，故作此修正，並將內文單字母簡寫統一格式）<br>
+A案/Ａ案<br>
+F與S等港口/Ｆ與Ｓ等港口<br>
+F港/Ｆ港<br>
+J川/Ｊ川<br>
+A號碼頭/Ａ號碼頭（共十一處）<br>
+T市/Ｔ市（共三十三處）<br>
+T地檢署/Ｔ地檢署<br>
+T機場/Ｔ機場<br>
+K市/Ｋ市（共二處）<br>
+K機場/Ｋ機場（共五處）<br>
+M少爺/Ｍ少爺<br>
+M先生/Ｍ先生（共十四處）<br>
+S銀行/Ｓ銀行<br>
+M看守所/Ｍ看守所<br>
+A公司/Ａ公司（共三處）<br>
+C款/Ｃ款（共三處）<br>
+XX年/ＸＸ年（共四處）<br>
+X年X月/Ｘ年Ｘ月（共二處）<br>
 </font>
 </td></tr></table>
