Revised books 17T3, 17V4, 17W4, and 17W7

--- a/book/17T3.html
+++ b/book/17T3.html
@@ -12,15 +12,15 @@ $title = '假面人質';
 $book = 'E17T3';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (449K)');
+ShowUpdbDownload('2023/3/23 (449K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (440K)');
 ShowMobiDownload('2017/11/3 (1295K)');
-ShowEpubDownload('2017/11/3 (342K)');
-ShowVEpubDownload('2017/11/3 (342K)');
+ShowEpubDownload('2023/3/23 (342K) 2017/11/3');
+ShowVEpubDownload('2023/3/23 (342K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17T3.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Jyayee Yen勘誤4處。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳明哲。感謝Jyayee Yen勘誤4處。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十</b><br>
 <br>
@@ -35,7 +35,26 @@ BookSectionEnd();
 就在距離不遠的一間公寓裡，凱特和潔德在黑暗中緊緊相擁著。而這一次，李奇非但沒有救回人質，反而將她們推向更致命的深淵……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/23)<br>
+凱待/凱特（共二處）<br>
+1分鐘/一分鐘<br>
+讓入難以承受/讓人難以承受<br>
+B M W/ＢＭＷ（共二處，電子書中只有此品牌用全型英文，故全書統一）<br>
+奈持/奈特<br>
+其實是個女人，？﹂/其實是個女人？﹂<br>
+侯巴持/侯巴特（共三處）<br>
+G ．泰勒/G．泰勒（共二處）<br>
+很多CD ，/很多CD，<br>
+大理石拱£：站、債/大理石拱門站<br>
+泰街站、債券街站/、債券街站<br>
+sally/Sally<br>
+你找到的S ，/你找到的S，<br>
+Do S/DOS<br>
+J＆L ．貝斯瓦特/J＆L．貝斯瓦特（共二處）<br>
+再做打。﹂/再做打算。﹂<br>
+太不可原請了/太不可原諒了<br>
+<br>
 (Jyayee Yen 2017/11/3)<br>
 鎗匙/鑰匙<br>
 前堤/前提<br>
