--- a/book/17V4.html
+++ b/book/17V4.html
@@ -12,15 +12,15 @@ $title = '一無所懼';
 $book = 'E17V4';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (504K)');
+ShowUpdbDownload('2023/3/23 (504K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (505K)');
 ShowMobiDownload('2017/11/3 (1466K)');
-ShowEpubDownload('2017/11/3 (382K)');
-ShowVEpubDownload('2017/11/3 (382K)');
+ShowEpubDownload('2023/3/23 (382K) 2017/11/3');
+ShowVEpubDownload('2023/3/23 (382K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17V4.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂、黃鴻硯。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者彭臨桂、黃鴻硯。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十二</b><br>
 <br>
@@ -35,7 +35,27 @@ BookSectionEnd();
 很可惜，絕望鎮的人還不知道自己惹錯人了（到時候他們就知道了）。大錯特錯！傑克．李奇沒行李、沒工作、沒固定居所。他，一無所懼。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/23)<br>
+科科羅拉多州/科羅拉多州<br>
+打入D 檔/打入D檔<br>
+烏事/鳥事<br>
+Bakelite ，/Bakelite，<br>
+D ．R ．沃恩/D．R．沃恩（共二處）<br>
+ ﹁當然。我們是有行政組織的/﹁當然。我們是有行政組織的（句首多空一格）<br>
+像她都樣/像她那樣<br>
+creosote ，/creosote，<br>
+顛倒的L ，/顛倒的L，<br>
+廢金矚/廢金屬<br>
+他跳過T ︵/他跳過T︵<br>
+TNT ，黃色炸藥/TNT，黃色炸藥<br>
+rumble strip ，/rumble strip，<br>
+DNA ，/DNA，<br>
+通用希腦語/通用希臘語<br>
+五ppb ，/五ppb，<br>
+crown Victoria/Crown Victoria<br>
+按紐/按鈕（共四處）<br>
+<br>
 (mPDB 2017/11/3)<br>
 橄攬球隊/橄欖球隊<br>
 剌鼻/刺鼻<br>
