--- a/book/17W4.html
+++ b/book/17W4.html
@@ -12,15 +12,15 @@ $title = '此地不宜久留';
 $book = 'E17W4';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (500K)');
+ShowUpdbDownload('2023/3/23 (500K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (500K)');
 ShowMobiDownload('2017/11/3 (1466K)');
-ShowEpubDownload('2017/11/3 (388K)');
-ShowVEpubDownload('2017/11/3 (388K)');
+ShowEpubDownload('2023/3/23 (388K) 2017/11/3');
+ShowVEpubDownload('2023/3/23 (388K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17W4.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者黃鴻硯。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者黃鴻硯。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十三</b><br>
 <br>
@@ -35,7 +35,39 @@ BookSectionEnd();
 無計可施的李奇甚至還被關進監牢，徘徊於昏迷與清醒之間。他不禁懷疑，自己的判斷是否出錯了？如果那天沒有做出「那件事」，會不會就能挽回無辜的生命？而事到如今，他要如何洗刷自己的清白？<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/23)<br>
+按紐/按鈕（共七處）<br>
+Asto﹁place/Astor Place<br>
+No﹁th Face/North Face<br>
+Radio Shack ，/Radio Shack，<br>
+bombilla ，/bombilla，<br>
+Crown Victoria ，/Crown Victoria，（共五處）<br>
+︵Annandale}/︵Annandale︶<br>
+CGUSAHRC ，/CGUSAHRC，<br>
+惠比持犬/惠比特犬<br>
+就說：﹃是雷歐尼的/就說：﹁是雷歐尼的<br>
+﹃什麼新情報？﹂/﹁什麼新情報？﹂<br>
+spotter ，/spotter，<br>
+A 線/A線<br>
+Brezhnev ，Andropov ，Chernenko ，/Brezhnev，Andropov，Chernenko，<br>
+Crown Victorias/Crown Victoria<br>
+Crown Victoria 一直/Crown Victoria一直<br>
+W 線/W線<br>
+FBI ，/FBI，<br>
+Edward Lee ，/Edward Lee，<br>
+VA L步槍/VAL步槍<br>
+多信任FBI 一點/多信任FBI一點<br>
+﹃雷根﹂/﹃雷根﹄<br>
+MP5SD ，/MP5SD，<br>
+扳到S、E、F 三個位置/扳到S、E、F三個位置<br>
+SauerP22o/SauerP220<br>
+Sauer P220/SauerP220<br>
+sig︱Saue滅音器/Sig︱Sauer滅音器<br>
+約翰．森/約翰．桑森<br>
+妳讀︽國際先驅論壇報︾的時應該/妳讀︽國際先驅論壇報︾的時候應該<br>
+捺著高溫/耐著高溫<br>
+<br>
 (mPDB 2017/11/3)<br>
 剌激/刺激<br>
 他為自已思路/他為自己思路<br>
