--- a/book/17W7.html
+++ b/book/17W7.html
@@ -12,15 +12,15 @@ $title = '厄運連鎖';
 $book = 'E17W7';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (469K)');
+ShowUpdbDownload('2023/3/23 (469K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (466K)');
 ShowMobiDownload('2017/11/3 (1375K)');
-ShowEpubDownload('2017/11/3 (366K)');
-ShowVEpubDownload('2017/11/3 (366K)');
+ShowEpubDownload('2023/3/23 (366K) 2017/11/3');
+ShowVEpubDownload('2023/3/23 (366K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17W7.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。<br>
+好讀書櫃《典藏版》，感謝邱五提供掃描檔。感謝秀鳳按掃描檔整理製作。譯者陳榮彬。感謝Gilbert勘誤。<br>
 <br>
 <b>「浪人神探」李奇系列之十一</b><br>
 <br>
@@ -35,7 +35,13 @@ BookSectionEnd();
 「特調小組」的成員接連死亡和失蹤，絕不可能只是巧合！李奇深入追查後發現，這一切似乎和一樁足以威脅國家安全的祕密交易有關！但時間已經不多了，究竟應該先保護國家，還是拯救老友？面對這艱難的抉擇，李奇第一次感到猶豫了……<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/03/23)<br>
+布蘭持/布蘭特<br>
+D︱A/DIA<br>
+century/Century<br>
+按紐/按鈕<br>
+<br>
 (mPDB 2017/11/3)<br>
 克布莱/克布萊<br>
 飾紋，，也沒/飾紋，也沒<br>
