--- a/book/17S6.html
+++ b/book/17S6.html
@@ -77,7 +77,7 @@ BookSectionEnd();
 去雜店買了六份/去雜貨店買了六份<br>
 五枚紙紋/五枚指紋<br>
 正準備投出指關節/正準備投出指關節球<br>
-我做得很好嗎2﹂/認為我做得很好嗎？﹂<br>
+我做得很好嗎2﹂/我做得很好嗎？﹂<br>
 <br>
 (mPDB 2017/11/3)<br>
 修改標點 (幾處)<br>
